--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@types/node": "20.14.2",
     "@types/react": "18.3.3",
+    "eslint": "^9.4.0",
+    "globals": "^15.4.0",
     "postcss": "^8",
+    "prettier": "^3.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "5.4.5"
   }
