--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push":"npx drizzle-kit push",
+    "db:studio":"npx drizzle-kit studio"
+
   },
   "dependencies": {
     "@clerk/elements": "^0.6.0",
     "@clerk/nextjs": "^5.1.4",
+    "@neondatabase/serverless": "^0.9.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.31.2",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -25,6 +30,7 @@
     "@eslint/js": "^9.4.0",
     "@types/node": "20.14.2",
     "@types/react": "18.3.3",
+    "drizzle-kit": "^0.22.6",
     "eslint": "^9.4.0",
     "globals": "^15.4.0",
     "postcss": "^8",
