--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:push":"npx drizzle-kit push",
-    "db:studio":"npx drizzle-kit studio"
-
+    "db:push": "npx drizzle-kit push",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/elements": "^0.6.0",
     "@clerk/nextjs": "^5.1.4",
     "@neondatabase/serverless": "^0.9.3",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -34,7 +34,7 @@
     "eslint": "^9.4.0",
     "globals": "^15.4.0",
     "postcss": "^8",
-    "prettier": "^3.3.1",
+    "prettier": "^3.3.2",
     "tailwindcss": "^3.4.1",
     "typescript": "5.4.5"
   }
