--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-speech-to-text": "^0.1.0",
+    "react-icons": "^5.2.1",
     "react-webcam": "^7.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
